Add node:test runner and unit tests for API exports

--- a/package.json
+++ b/package.json
@@ -104,9 +104,10 @@
     "release:major": "npm version major -m 'Release v%s' && npm publish",
     "release:minor": "npm version minor -m 'Release v%s' && npm publish",
     "release:patch": "npm version patch -m 'Release v%s' && npm publish",
-    "test": "npm-run-all build -p -r test:*",
+    "test": "npm-run-all build test:unit -p -r test:e2e test:server",
     "test:e2e": "wdio wdio.conf.cjs",
     "test:server": "node test/server.js",
+    "test:unit": "node --test test/unit/*test.js",
     "start": "run-s build:ts test:server watch",
     "watch": "run-p watch:*",
     "watch:ts": "tsc -b -w",
