--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "test": "npm-run-all build test:unit -p -r test:e2e test:server",
     "test:e2e": "wdio wdio.conf.cjs",
     "test:server": "node test/server.js",
-    "test:unit": "node --test test/unit/*test.js",
+    "test:unit": "node --test test/unit/{.,**}/*test.js",
     "start": "run-s build:ts test:server watch",
     "watch": "run-p watch:*",
     "watch:ts": "tsc -b -w",
